--- a/src/views/Sales.ejs
+++ b/src/views/Sales.ejs
@@ -449,19 +449,19 @@
                             </span>
                           </td>
                           <td>
-                            <span class="badge rounded-pill text-bg-secondary">
+                          
                               <%= sale.productOurService %>
-                            </span>
+                            
 
                           </td>
                         
                           <td>
-                            <span class="badge rounded-pill text-bg-secondary">
+                          
                               <%= sale.productCategory %>
-                            </span>
+
                           </td>
                           <td>
-                            <span class="badge rounded-pill text-bg-secondary">R$ <%= sale.price %></span>
+                          R$ <%= sale.price %>
 
                           </td>
                           <td>
